# act-prm-tinker

./: .gitignore  CLAUDE.md  README.md  main.py  main_pytorch.py  main_pytorch_lm.py  notes.md  pyproject.toml  run_joint_training.sh  stage_metrics.py
.github/workflows/: lint.yml
configs/generator/: act_prm_qwen3.yaml  aprm_qwen3.yaml  aprm_qwen3_ap.yaml  aprm_qwen3_ap_nobandit.yaml  aprm_qwen3_grpo.yaml  default.yaml  default_nothink.yaml  grpo.yaml  nobandit_aprm_qwen3_ap.yaml
configs/lora/: r16_a32_qkvo.yaml  r32_a32_linear.yaml  r32_a32_qkvo.yaml  r8_a16_linear.yaml  r8_a16_qkvo.yaml
configs/model/: hf_qwen3_4b_inst_2507.yaml  hf_qwen3_8b.yaml
configs/trainer/: aprm_for_sft100.yaml  pt_aprm_joint100.yaml  pt_sft.yaml  pt_sft_gen5.yaml  qwen3_4b_aprm.yaml  qwen3_4b_aprm0_sft20_rl.yaml  qwen3_4b_aprm100_sft100_rl100.yaml  qwen3_4b_aprm10_sft20_rl.yaml  qwen3_4b_aprm20_sft100_rl.yaml  qwen3_4b_aprm20_sft200_rl200.yaml  qwen3_4b_aprm20_sft20_rl.yaml  qwen3_4b_aprm40_sft100_rl.yaml  qwen3_4b_aprm40_sft200_rl200.yaml  qwen3_4b_aprm_ap100.yaml  qwen3_4b_aprm_ap100_topk.yaml  qwen3_4b_aprm_ap30.yaml  qwen3_4b_pg.yaml  (+14 more)
notebooks/: 2.0-env_dev-real_state.ipynb  2.5.1-env_dev-traces-snorkel_finance.ipynb  4.0-snorkel_finance_trace_splits.ipynb  5.0-tau2bench_trace_splits.ipynb  babyai.ipynb  babyai_pytorch_setup.ipynb
notes/: ACTPRM.md  COFFEE.md
scripts/: generate_textworld_sft_data.py  report_monitor.py  run_live_tests.sh  run_tw_sft.sh  run_tw_sft_all.sh  wandb_report.py
tests/: test_claude_agent_sdk_handler.py  test_logprobs_memory.py  test_snorkel_finance.py
(+273 files in other folders)
